--- a/locales/en.json
+++ b/locales/en.json
@@ -686,8 +686,8 @@
   "tokens_title": "supported tokens",
   "tokens_subtitle": "In addition to Bitcoin and Ether, enjoy trading a comprehensive list of cryptocurrencies spanning across the Web3, DeFi, Metaverse and Smart contract spaces.",
   "search_coins": "Search for a Coin, Token here...",
-  "otc_title": "Otix OTC Trading Service, Trade in large blocks at competitive prices in AED and USD",
-  "otc_subtitle": "Register your interest and start OTC trading with BitOasis today!",
+  "otc_title": "Otix OTC Trading Service",
+  "otc_subtitle": "Trade in large blocks at competitive prices in AED and USD",
   "otc_btn_title": "register now",
   "vip_title": "Otix VIP",
   "vip_subtitle": "Join the Otix VIP lounge",
