--- a/locales/ar.json
+++ b/locales/ar.json
@@ -14,10 +14,9 @@
   "way_two_content": "الإيداع والتداول بالدرهم الإماراتي و الريال السعودي ابدأ بشراء وبيع وتبديل أكثر من 60 عملة رقمية في أي وقت ومكان",
   "way_three_content": "الإيداع والتداول بالدرهم الإماراتي و الريال السعودي ابدأ بشراء وبيع وتبديل أكثر من 60 عملة رقمية في أي وقت ومكان",
   "way_four_content": "الإيداع والتداول بالدرهم الإماراتي و الريال السعودي ابدأ بشراء وبيع وتبديل أكثر من 60 عملة رقمية في أي وقت ومكان",
-  "get_started_title": "ابدا خلال دقيقتين",
-  "get_started_subtitle": "أويسس أكبر وأكثر منصة موثوقة في المنطقة",
+  "get_started_title": "ابدأ معنا فى دقائق",
+  "get_started_subtitle": "اوتكس تعتبر افضل واكثر منصة موثوقة لتداول العملات المشفرة",
   "Details": "التفاصيل",
-  "Buy": "شراء",
   "otix_Lite": "لايت",
   "products_details": "شراء وبيع وتبديل أكثر من60 عملة رقمية بسرعة وسهولة مع 0% رسوم ",
   "products_details2": "قم بإدارة وتتبع محفظتك أثناء التنقل من كمبيوترك المحمول أو هاتفك.  ",
@@ -27,14 +26,14 @@
   "products_subTitle": "توفر اوتكس أدوات تداول واستثمار سهلة الاستخدام",
   "our_mission_title": "مهمتنا",
   "get_started_btn": "ابدا الان",
-  "get_started_register": "1. الاشتراك",
-  "get_started_register_desc": "أنشئ حسابك على منصة بت أويسس",
-  "get_started_verfiy": "2. التوثيق",
-  "get_started_verify_desc": "وثق حسابك بسهولة وأمان خلال دقائق معدودة",
-  "get_started_deposit": "3. الإيداع",
-  "get_started_deposit_desc": "أودع في حسابك بسرعة وأمان عبر خياراتنا المريحة",
-  "get_started_buy": "4. التداول",
-  "get_started_buy_desc": "ابدأ بشراء وبيع وتبديل أكثر من 60 عملة رقمية في أي وقت ومكان",
+  "get_started_register": "تسجيل الدخول",
+  "get_started_register_desc": "قم بتسجيل الدخول بسهولة لانشاء حسابك",
+  "get_started_verfiy": "التوثيق",
+  "get_started_verify_desc": "قم بتوثيق حسابك بكل سهولة وامان معنا",
+  "get_started_deposit": "الإيداع",
+  "get_started_deposit_desc": "اودع اموالك بامان من خلال خياراتنا الموثوقة والمضمونة",
+  "get_started_buy": "التداول",
+  "get_started_buy_desc": "قم بشراء وبيع العملات المشفرة بسهولة وامان فى اي وقت وفى اي مكان. /n فى اي وقت وفى اى مكان اشتر وتداول اكثر من 60 عملة مشفرة. /n اشتر وتداول اكثر من 60 عملة مشفرة اينما كنت, فى اي وقت",
   "coin_1":"بيتكوين",
   "coin_2":"ايثريوم",
   "coin_3":"اكس ار بي",
@@ -592,5 +591,22 @@
   "otc_btn_title": "سجل الان",
   "vip_title": "عملاء اوتكس المميزين",
   "vip_subtitle": "انضم إلى برنامج العملاء المميزين في بت أويسس",
-  "vip_btn_title": "انضم للبرنامج"
+  "vip_btn_title": "انضم للبرنامج",
+  "market": "السوق",
+  "ways_section_title": "اسهل طريقة لتداول العملات المشفرة",
+  "trade_with_your_currency": "تداول بسهولة بعملتك",
+  "AED_and_SAR_are_accepted_for_deposits_and_transactions": "تداول بسهولة بالدرهك الاماراتى والريال السعودى",
+  "largest_coins_available": "تداول غير محدود",
+  "trade_with_more_than_60_cryptocurrencies": "تداول باكثر من 60 عملة رقمية.",
+  "trading_pairings": "أكثر من 200 زوج تداول ، وأكثر من 60 مجموعة من الأصول المشفرة ، والمزيد في المستقبل.",
+  "safe_secure": "الامان والثقة",
+  "we_use_the_most_secure_solutions_available_to_store_your_cryptocurrency_in_cold_storage": "نستخدم الحلوول الاكثر امانا المتاحة لتخزين عملتك المشفرة باستخدام التخزين البارد.",
+  "rade_wherever_you_are": "تداول اينما كنت",
+  "with_our_android_and_ios_apps_you_can_trade_and_invest_while_on_the_go": "باستخدام تطبيق Android, iOS الخاص بنا يمكنك التداول والاستثمار فى اى مكان",
+  "market_title": "السوق",
+  "market_subtitle": "our market subtitle",
+  "fees_flat_deposit": "الإيداع والسحب فيات",
+  "fees_lite_pro": "لايت / برو",
+  "fees_crypto_send": "إرسال واستقبال التشفير",
+  "contact_with_us": "تواصل معنا"
 }
