--- a/locales/en.json
+++ b/locales/en.json
@@ -84,17 +84,17 @@
   "products_subTitle": "Otix is the largest and most trusted crypto platform in the region",
   "get_started_btn": "get started",
   "get_started_register": "Sign up",
-  "get_started_register_desc": "Signup to have an Otix account easily",
+  "get_started_register_desc": "Signup to have an Otix account easily. /n Create an Otix account by registering. /n",
   "get_started_register_desc2": "Create an Otix account by registering",
   "get_started_verfiy": "Validate / confirm",
-  "get_started_verify_desc": "Confirm your own identity with our trusted partners",
+  "get_started_verify_desc": "Confirm your own identity with our trusted partners. /n Check your identification with one of our reliable partners. ",
   "get_started_verify_desc2": "Check your identification with one of our reliable partners",
   "get_started_deposit": "Deposit",
-  "get_started_deposit_desc": "Deposit your funds securely through our trusted & secured options",
+  "get_started_deposit_desc": "Deposit your funds securely through our trusted & secured options. /n Deposit your funds safely using the methods we support. /n Securely deposit your funds using the methods we support.",
   "get_started_deposit_desc2": "Deposit your funds safely using the methods we support",
   "get_started_deposit_desc3": "Securely deposit your funds using the methods we support",
   "get_started_buy": "Buy",
-  "get_started_buy_desc": "Buy & sell cryptocurrencies easily and safely anytime, anywhere",
+  "get_started_buy_desc": "Buy & sell cryptocurrencies easily and safely anytime, anywhere. /n At anytime, anywhere, buy & trade more than 60 cryptocurrencies. /n Buy and trade more than 60 cryptocurrencies wherever you are, at any time.",
   "get_started_buy_desc2": "At anytime, anywhere, buy & trade more than 60 cryptocurrencies",
   "get_started_buy_desc3": "Buy and trade more than 60 cryptocurrencies wherever you are, at any time",
   "coin_1":"Bitcoin",
@@ -697,5 +697,8 @@
   "code_of_ethics_subtitle": "code of ethics subtitle",
   "complaints_policy_subtitle": "complaints policy subtitle",
   "affiliate_subtitle_subtitle": "affiliate subtitle subtitle",
-  "contact_with_us": "contact with us"
+  "contact_with_us": "contact with us",
+  "fees_flat_deposit": "Fiat Deposit & Withdraw",
+  "fees_lite_pro": "Lite/Pro",
+  "fees_crypto_send": "Crypto Send & Receive"
 }
