fill blank pages

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -33,7 +33,7 @@
   "get_started_deposit": "الإيداع",
   "get_started_deposit_desc": "اودع اموالك بامان من خلال خياراتنا الموثوقة والمضمونة",
   "get_started_buy": "التداول",
-  "get_started_buy_desc": "قم بشراء وبيع العملات المشفرة بسهولة وامان فى اي وقت وفى اي مكان. /n فى اي وقت وفى اى مكان اشتر وتداول اكثر من 60 عملة مشفرة. /n اشتر وتداول اكثر من 60 عملة مشفرة اينما كنت, فى اي وقت",
+  "get_started_buy_desc": "قم بشراء وبيع العملات المشفرة بسهولة وامان فى اي وقت وفى اي مكان",
   "coin_1":"بيتكوين",
   "coin_2":"ايثريوم",
   "coin_3":"اكس ار بي",
@@ -49,11 +49,11 @@
   "about_us": "من نحن",
   "about_subtitle": "اوتكس أكبر وأكثر منصة موثوقة في المنطقة",
   "about_content_title": "صرافة أوتكس",
-  "about_content_desc": "يقع المقر الرئيسي لشركة Otix في ليتوانيا ، وقد تم تأسيسها في عام 2022 وتعتبر واحدة من أكثر منصات العملات المشفرة الموثوقة التي تغطي المستخدمين حول العالم",
+  "about_content_desc": "يقع المقر الرئيسي لشركة أوتكس في ليتوانيا، وقد تأسست في عام 2022 وتعتبر واحدة من أكثر منصات العملات المشفرة الموثوقة التي تغطي المستخدمين في جميع أنحاء العالم حيث أنها مصرح بها من قبل دائرة التحقيق في الجرائم المالية وهي ملتزمة بالامتثال للقوانين المعمول بها حيث تعمل. أوتكس  واحدة من أفضل المنصات لشراء وبيع العملات المشفرة عبر الإنترنت بسبب خدمتنا الممتازة، والرسوم المنخفضة، وخيارات التمويل متعددة الاستخدامات ومعايير الأمان الصارمة، لمنح الأشخاص الوسائل المناسبة للاستثمار السريع والآمن في المساحة. نحن مكرسون لجعل العملات المشفرة متاحة للعالم وتمكين الناس من جميع أنحاء العالم من الاستثمار بشكل مستقل. توفر أوتكس خدمات تبادل العملات المشفرة والمحفظة امتثالاً لقوانين ولوائح مكافحة غسل الأموال ومكافحة تمويل الإرهاب (AML/CFT).",
   "our_mission_subtitle": "اوتكس أكبر وأكثر منصة موثوقة في المنطقة",
-  "our_mission_desc": "نهدف إلى تقديم البنية التحتية الأكثر أمانًا وتنظيمًا في تداول العملات المشفرة لعملاء التجزئة والمؤسسات في جميع أنحاء العالم.",
+  "our_mission_desc":"نهدف إلى تقديم البنية التحتية الأكثر أمانًا وتنظيمًا في تداول العملات المشفرة لعملاء التجزئة والمؤسسات في جميع أنحاء العالم. نحن نقدم سيولة استثنائية وأسعارًا تنافسية لجميع أسواقنا حتى تتمكن من تحقيق أهدافك الاستثمارية بسرعة وثقة. سواء كنت تاجرًا متقدمًا أو مبتدئًا في العملات المشفرة، تمنحك أوتكس القدرة على رسم المسار المالي الخاص بك",
   "our_vision_title": "رؤيتنا",
-"our_vision_desc": "تتمثل رؤيتنا في أن نكون المنصة الرائدة للعملات المشفرة القابلة للتداول في جميع أنحاء العالم. نوفر لعملائنا الخدمة الكاملة الأكثر أمانًا وموثوقية لمشغل تبادل العملات الافتراضية وإيداع منصة مشغل تبادل العملات الافتراضية.",
+"our_vision_desc": "تتمثل رؤيتنا في أن نكون منصة العملات المشفرة الرائدة القابلة للتداول في جميع أنحاء العالم. منح عملائنا الخدمة الكاملة الأكثر أمانًا وموثوقية لمشغل تبادل العملات الافتراضي ومنصة مشغل تبادل العملات الافتراضية حيث نعتقد أن العملات المشفرة ستكون البنية الأساسية لنظام مالي رقمي جديد",
 "tareding_volume": "24 ساعة / حجم التداول",
 "change": "24 ساعة / التغيير",
 "about_title": "من نحن",
@@ -352,16 +352,15 @@
   "link_contact": "تواصل معنا",
   "cookie_title": "سياسة ملفات الارتباط",
   "cookie_subtitle": "العنوان الفرعي لسياسة ملفات تعريف الارتباط",
-  "affiliate_title": "إنضم لبرنامج",
-  "affiliate_subtitle": "العنوان الفرعي للبرنامج التابع",
+  "affiliate_title": "الشركة المنتسبة",
   "buy_bitcoin_title": "شراء البيتكوين",
   "buy_bitcoin_subtitle": "شراء ترجمة البيتكوين",
   "buy_etherum_title": "شراء الاثير",
   "buy_etherum_subtitle": "شراء العنوان الفرعي الأثير",
   "buy_otix_token_title": "شراء رمز otix",
   "buy_otix_token_subtitle": "شراء العنوان الفرعي otix token",
-  "referral_title": "برنامج الإحالة",
-  "referral_subtitle": "العنوان الفرعي لبرنامج الإحالة",
+  "referral_title": "الإحالة",
+  "referral_subtitle": "قم بإحالة أصدقائك واحصل على ما يصل إلى 50٪ عمولات. /n قم بدعوة أصدقائك للانضمام إلى أوتكس واكسب خصم من رسوم التداول الخاصة بهم. يستعيدون 50 دولارًا و 5500 دولارًا أمريكيًا مباشرة بعد أول تجارة لهم!",
   "allow_cookie": "ملفات تعريف الارتباط",
   "we_use_cookie": "نحن نستخدم ملفات تعريف الارتباط لتخصيص المحتوى والإعلانات ، ولتوفير ميزات وسائل التواصل الاجتماعي ولتحليل حركة المرور لدينا. نشارك أيضًا معلومات حول استخدامك لموقعنا مع شركائنا في وسائل التواصل الاجتماعي والإعلان والتحليل الذين قد يجمعونها مع المعلومات الأخرى التي قدمتها لهم أو التي جمعوها من استخدامك لخدماتهم.",
   "ok": "موافق",
@@ -608,5 +607,79 @@
   "fees_flat_deposit": "الإيداع والسحب فيات",
   "fees_lite_pro": "لايت / برو",
   "fees_crypto_send": "إرسال واستقبال التشفير",
-  "contact_with_us": "تواصل معنا"
+  "contact_with_us": "تواصل معنا",
+  "how_to_refer": "كيف تشير ؟",
+  "get_referral_link": " أحصل على رابط الإحالة",
+  "sign_up_or_log_in_to_get_your_crypto_referral_link": "قم بتسجيل الدخول للحصول على رابط إحالة العملات المشفرة الخاص بك مع معدل خصم العمولة",
+  "invite_your_friends": " قم بدعوة أصدقائك",
+  "share_your_referral_link_with_your_friends_and_followers": "شارك رابط الإحالة الخاص بك مع أصدقائك ومتابعيك",
+  "start_earning": "الكسب المبتدئ",
+  "Youll_share_up_to": "ستشارك ما يصل إلى 40٪ عمولة في كل مرة يكملون فيها صفقة",
+  "referral_program_rules": "قواعد برنامج الإحالة:",
+  "no_limit_on_how_many_friends_a_referrer_can_invite": "لا حد لعدد الأصدقاء الذين يمكن للمحيل دعوتهم. سيحصل المحيل على عمولة من رسوم تداول الحكم لمدة 12 شهرًا",
+  "when_a_referee_conducts_a_trade_in_spot_market": "عندما يجري الحكم تجارة في السوق الفورية، فإن نسبة معينة من رسوم التداول الناتجة ستصبح مكافأة عمولية.",
+  "the_referral_is_not_considered_eligible": "لا تعتبر الإحالة مؤهلة إذا كان الحكم والمحيل يشتركان في نفس IP أو لم يكن حساب المحيل أقدم من يوم واحد",
+  "otix_will_cancel_any_referral_benefit_if_any_user_is_found": " ستلغي أوتكس أي ميزة إحالة إذا وجد أي مستخدم يغش عن طريق إجراء تسجيلات بالجملة.",
+  "otix_reserves_the_right_to_finally_interpret_the_Referral_Program": "يحتفظ أوتكس بالحق في تفسير قواعد برنامج الإحالة أخيرًا وإجراء تغييرات من وقت لآخر",
+  "affiliate_subtitle": "قم بدعوة عملائك أو الشركات التابعة الأخرى واكسب عمولات على رسوم التداول الفوري والعقد!",
+  "affiliate_benefits_and_services": "الاستحقاقات والخدمات المنتسبة",
+  "up_to_long_term_commissions_on_spot": "ما يصل إلى 60٪ عمولات طويلة الأجل على رسوم التداول الفوري والعقود",
+  "additional_on_affiliates_total_commissions": "10٪ إضافية على إجمالي عمولات الشركات الفرعية",
+  "one_to_one_professional_account_manager": "مدير حساب محترف فردي",
+  "contract_bonus_and_campaign_support": "مكافأة العقد ودعم الحملة",
+  "up_to_month_base_salary": "راتب أساسي يصل إلى 600 دولار في الشهر",
+  "exclusive_affiliate_management_system": "نظام إدارة المنتسبين الحصري",
+  "otix_peripheral_pack": "حزمة أوتيكس المحيطية",
+  "buy_bitcoin_desc": "البيتكوين هي أول عملة رقمية مفتوحة ويسيطر عليها آلاف الأفراد حول العالم الذين يتم تحفيزهم مالياً للحفاظ على أمن وصلاحية الشبكة. ويستند إلى شبكة لامركزية من نظير إلى نظير تسهل المدفوعات من مستخدم إلى آخر. تعمل البيتكوين خارج سيطرة أي كيان مركزي، مثل الحكومة أو الشركة، ولكن ضمن سيطرة قواعد المصدر المفتوح للبروتوكول. أصغر وحدة من عملة البيتكوين المسجلة على blockchain هي Satoshi (0.00000001 قبل الميلاد). تم تسمية الوحدة على اسم المبدع الأصلي لعملة البيتكوين، ساتوشي ناكاموتو.",
+  "buy_bitcoin_easily": "اشترِ البيتكوين بسهولة",
+  "otix_makes_it_easy_and_safe_for_you_to_buy_bitcoin_today": "تجعل أوتكس شراء البيتكوين اليوم أمرًا سهلاً وآمنًا",
+  "how_to_buy_bitcoin": "كيف تشتري البيتكوين ؟",
+  "create_your_free_otix_account": "قم بإنشاء حساب أوتكس المجاني الخاص بك",
+  "provide_your_email_address": "قم بتزويد عنوان بريدك الإلكتروني وبلد الإقامة وتأمين حسابك بكلمة مرور قوية.",
+  "connect_your_funding_method": "قم بتوصيل طريقة التمويل الخاصة بك",
+  "connect_your_card_or_bank_account_after_Otix_verifies_your_account": "قم بتوصيل بطاقتك أو حسابك المصرفي بعد أن تتحقق أوتكس من حسابك",
+  "buy_bitcoin": "شراء البيتكوين",
+  "buy_bitcoin_with_as_little": "اشترِ عملة البيتكوين بأقل من 10 دولارات",
+  "bitcoin_price": "سعر البيتكوين",
+  "check_the_current_bitcoin_price_on_Otix_to_help_inform_your_bitcoin_investment": "تحقق من سعر البيتكوين الحالي على أوتكس للمساعدة في زيادة استثمارك في البيتكوين",
+  "btc_to_usd_converter": "BTC إلى USD Converter",
+  "use_our_simple_bitcoin_to_usd_calculator": "استخدم عملة البيتكوين الخاصة بنا على حاسبة الدولار الأمريكي لمعرفة كمية البيتكوين التي يمكنك شراؤها بالدولار الأمريكي",
+  "why_buy_btc_with_otix": "لماذا تشتري البيتكوين مع أوتكس ؟",
+  "pay_for_goods_and_services_without_bank": "ادفع ثمن السلع والخدمات بدون مصرف أو مقدم خدمات مالية ",
+  "send_payments_around_the_world_instantly_and_easily": "أرسل المدفوعات حول العالم على الفور وبسهولة.",
+  "invest_in_the_growing_potential_of_crypto": "استثمر في الإمكانات المتزايدة للعملات الرقمية",
+  "otix_support_team_offers_dedicated_client_services": "لدينا فريق دعم متخصص لخدمة العملاء على مدار 24 ساعة طوال العام",
+  "otix_has_the_desktop_and_mobile_solutions": "لدى أوتكس الحلول و الطرق السهلة التي تحتاجها لشراء البيتكوين بسهولة والانضمام إلى مستقبل التمويل.",
+  "otix’_security_standards_are_designed_to_keep_your_funds_safe": "تم تصميم معايير أوتكس الأمنية للحفاظ على سلامة أموالك",
+  "buy_etherum_desc": "الإيثر (ETH) هي عملة مشفرة تم إنشاؤها بواسطة منصة إيثريوم والتي تستخدم لتعويض عقد التعدين عن الحسابات التي يتم إجراؤها. إنها العملة الأصلية لـ Ethereum blockchain وتستخدم لإجراء مدفوعات من نظير إلى نظير، ودفع رسوم المعاملات المتكبدة على الشبكة وكسب مكافآت لتأمين البروتوكول . أيضًا، الإيثريوم تعتبر منصة blockchain لامركزية تمامًا توفر قدرات كتابة العقود الذكية المستقلة. و هي تستخدم على نطاق واسع لإنشاء تطبيقات لا مركزية. وضعت شبكة إيثريوم العديد من المعايير الرمزية، بما في ذلك ERC20 ERC721 ERC1155. تسمح المعايير الرمزية التي طورتها إيثريوم لأصول التشفير المنتشرة على المنصة بأن تظل متوافقة مع التبادلات اللامركزية الحالية (DEXs). كما ساعدت في ظهور رموز غير قابلة للاستبدال (NFTs).",
+  "buy_etherum_easily": "اشترِ الإيثريوم بسهولة",
+  "otix_makes_it_easy_and_safe_for_you_to_buy_etherum_today": "يجعل أوتكس شراء الإيثريوم اليوم أمرًا سهلاً وآمنًا",
+  "how_to_buy_etherum": "كيف تشتري الأثيريوم ؟",
+  "buy_etherum": "اشترِ الأثيريوم",
+  "buy_etherum_with_as_little": "اشترِ الأثيريوم بأقل من 10 دولارات",
+  "etherum_price": "سعر الأثيريوم",
+  "check_the_current_etherum_price_on_Otix_to_help_inform_your_bitcoin_investment": "تحقق من سعر الأثيريوم  الحالي على أوتكس للمساعدة في زيادة استثمارك",
+  "etherum_to_usd_converter": "ETH الى USD Converter",
+  "use_our_simple_etherum_to_usd_calculator": "استخدم الآلة الحاسبة البسيطة  الخاصة بنا لتحويل الأثيريوم إلى الدولار الأمريكي لمعرفة مقدار الإثيريوم الذي يمكنك شراؤه بالدولار الأمريكي",
+  "why_buy_eth_with_otix": "لماذا تشتري الأثيريوم مع أوتكس ؟",
+  "diversify_your_long_term_investment_strategy": "تنوع في استراتيجيتك الاستثمارية طويلة الأجل",
+  "execute_smart_contracts_in_the_ethereum_blockchain": "نفذ العقود الذكية في Ethereum blockchain",
+
+  
+  "buy_otix_token_desc": "تريد شراء العملات المشفرة ولكن لست متأكدًا من كيفية ذلك ؟ لا تقلق! تقدم أوتكس العديد من الخيارات. يمكنك بسهولة شراء OTX بأقل الرسوم وأعلى درجات الأمان.",
+  "store_or_use_your_otx_in_otix": "قم بتخزين أو استخدام OTX الخاص بك في أوتكس",
+  "you_can_store_otx_in_your_personal_crypto_wallet": "يمكنك تخزين OTX في محفظة العملات المشفرة الشخصية الخاصة بك أو ببساطة الاحتفاظ بها في حساب أوتكس الخاص بك. يمكنك أيضًا استبدال العملات المشفرة الأخرى. إذا كنت ترغب في استبدال OTX الخاص بك بتبادل لامركزي، فقد ترغب في التحقق من Trust Wallet الذي يدعم ملايين الأصول وسلاسل الكتل.",
+  "buy_otx_easily": "شراء OTX بسهولة",
+  "otix_makes_it_easy_and_safe_for_you_to_buy_otx_today": "تجعل أوتكس شراء OTX اليوم أمرًا سهلاً وآمنًا.",
+  "how_to_buy_otx": "كيف تشتري OTX ؟",
+  "buy_otx": "شراء OTX",
+  "buy_otx_with_as_little": "اشترِ عملة OTX بأقل من 10 دولارات",
+  "otx_price": "سعر OTX",
+  "check_the_current_otx_price_on_Otix_to_help_inform_your_bitcoin_investment": "تحقق من سعر OTX الحالي على أوتكس للمساعدة في زيادة إستثمارك",
+  "otx_to_usd_converter": "OTX إلى USD Converter",
+  "use_our_simple_otx_to_usd_calculator": "استخدم الآلة الحاسبة البسيطة  الخاصة بنا لتحويل OTX إلى الدولار الأمريكي لمعرفة مقدار OTX الذي يمكنك شراؤه بالدولار الأمريكي.",
+  "why_buy_otx_with_otix": "لماذا تشتري OTX مع أوتكس؟",
+  "pay_for_goods_and_services": "تنوع في استراتيجيتك الاستثمارية طويلة الأجل",
+  "send_payments_around_the_world": "  نفذ العقود الذكية في OTX blockchain"
+
 }
