--- a/locales/en.json
+++ b/locales/en.json
@@ -84,17 +84,17 @@
   "products_subTitle": "Otix is the largest and most trusted crypto platform in the region",
   "get_started_btn": "get started",
   "get_started_register": "Sign up",
-  "get_started_register_desc": "Signup to have an Otix account easily. /n Create an Otix account by registering. /n",
+  "get_started_register_desc": "Signup to have an Otix account easily.",
   "get_started_register_desc2": "Create an Otix account by registering",
   "get_started_verfiy": "Validate / confirm",
-  "get_started_verify_desc": "Confirm your own identity with our trusted partners. /n Check your identification with one of our reliable partners. ",
+  "get_started_verify_desc": "Confirm your own identity with our trusted partners.",
   "get_started_verify_desc2": "Check your identification with one of our reliable partners",
   "get_started_deposit": "Deposit",
-  "get_started_deposit_desc": "Deposit your funds securely through our trusted & secured options. /n Deposit your funds safely using the methods we support. /n Securely deposit your funds using the methods we support.",
+  "get_started_deposit_desc": "Deposit your funds securely through our trusted & secured options.",
   "get_started_deposit_desc2": "Deposit your funds safely using the methods we support",
   "get_started_deposit_desc3": "Securely deposit your funds using the methods we support",
   "get_started_buy": "Buy",
-  "get_started_buy_desc": "Buy & sell cryptocurrencies easily and safely anytime, anywhere. /n At anytime, anywhere, buy & trade more than 60 cryptocurrencies. /n Buy and trade more than 60 cryptocurrencies wherever you are, at any time.",
+  "get_started_buy_desc": "Buy & sell cryptocurrencies easily and safely anytime, anywhere.",
   "get_started_buy_desc2": "At anytime, anywhere, buy & trade more than 60 cryptocurrencies",
   "get_started_buy_desc3": "Buy and trade more than 60 cryptocurrencies wherever you are, at any time",
   "coin_1":"Bitcoin",
@@ -112,11 +112,11 @@
   "about_us": "who are we",
   "about_subtitle": "otix is the largest and most trusted platform in the region",
   "about_content_title": "OTX",
-  "about_content_desc": "Headquartered in Lithuania, Otix is Established in 2022 and is considered one of the most trusted cryptocurrency platforms covering users around the world as it is authorized by the Financial Crime Investigation Service and it`s committed to complying with the applicable laws where it operates. Otix provides both cryptocurrency exchange and wallet services in compliance with anti-money laundering and Countering Financing of Terrorism (AML/CFT) laws and regulations. ",
+  "about_content_desc": "Headquartered in Lithuania, Otix is Established in 2022 and is considered one of the most trusted cryptocurrency platforms covering users around the world as it is authorized by the Financial Crime Investigation Service and it`s committed to complying with the applicable laws where it operates. Otix is one of the best platforms to buy and sell crypto online because of our excellent service, low fees, versatile funding options and rigorous security standards, to give people the means to quickly and securely invest in the space. We are dedicated to making cryptocurrency available and accessible to the world and enabling people from all over the world to invest independently. Otix provides both cryptocurrency exchange and wallet services in compliance with anti-money laundering and Countering Financing of Terrorism (AML/CFT) laws and regulations",
   "our_mission_subtitle": "otix is the largest and most trusted platform in the region",
-  "our_mission_desc": "We aim to offer the most secure and regulated infrastructure in cryptocurrency trading for retail and institutional clients across the world.",
+  "our_mission_desc": "We aim to offer the most secure and regulated infrastructure in cryptocurrency trading for retail and institutional clients across the world. We offer exceptional liquidity and competitive pricing for all our markets so you can achieve your investment goals quickly and confidently. Whether you’re an advanced trader or a crypto-beginner, Otix gives you the power to chart your own financial course",
   "our_vision_title": "our vision",
-  "our_vision_desc": "Our vision is to be the leading tradable cryptocurrency platform all over the world. Provide our clients with the most secured and trusted full-service of a virtual currency exchange operator and deposit virtual currency exchange operator platform.",
+  "our_vision_desc": "Our vision is to be the leading tradable cryptocurrency platform all over the world. Provide our clients with the most secured and trusted full-service of a virtual currency exchange operator and deposit virtual currency exchange operator platform as we believe that cryptocurrencies will be the building blocks to a new digital financial system",
   "tareding_volume": "24H/Tareding Volume",
   "change": "24H/Change",
   "market": "market",
@@ -452,19 +452,18 @@
   "more_information": "more information",
   "cookie_title": "cookie policy",
   "cookie_subtitle": "cookie policy subtitle",
-  "affiliate_title": "affiliate program",
-  "affiliate_subtitle": "affiliate program subtitle",
+  "affiliate_title": "affiliate",
   "buy_bitcoin_title": "buy bitcoin",
   "buy_bitcoin_subtitle": "buy bitcoin subtitle",
   "buy_etherum_title": "buy etherum",
   "buy_etherum_subtitle": "buy etherum subtitle",
   "buy_otix_token_title": "buy otix token",
   "buy_otix_token_subtitle": "buy otix token subtitle",
-  "referral_title": "referral program",
-  "referral_subtitle": "referral program subtitle",
+  "referral_title": "referral",
+  "referral_subtitle": "Refer your friends and get up to 50% commissions. /n Invite your friends to join Otix and earn a rebate from their trading fees.",
   "allow_cookie": "allow cookies",
   "we_use_cookie": " We use cookies to personalise content and ads, to provide social media features and to analyse our traffic. We also share information about your use of our site with our social media, advertising and analytics partners who may combine it with other information that you’ve provided to them or that they’ve collected from your use of their services.",
-  "ok": "OK, i aggree",
+  "ok": "OK, i agree",
   "cancel": "cancel",
   "link_otix_cookie_policy": "Cookie Policy",
   "privacy_title": "Privacy Policy",
@@ -700,5 +699,77 @@
   "contact_with_us": "contact with us",
   "fees_flat_deposit": "Fiat Deposit & Withdraw",
   "fees_lite_pro": "Lite/Pro",
-  "fees_crypto_send": "Crypto Send & Receive"
+  "fees_crypto_send": "Crypto Send & Receive",
+  "how_to_refer": "How to refer?",
+  "get_referral_link": "Get referral link",
+  "sign_up_or_log_in_to_get_your_crypto_referral_link": "Sign up or log in to get your crypto referral link with the commission rebate rate.",
+  "invite_your_friends": "Invite your friends",
+  "share_your_referral_link_with_your_friends_and_followers": "Share your referral link with your friends and followers",
+  "start_earning": "Start earning",
+  "Youll_share_up_to": "You'll share up to 40 % commission every time they complete a trade.",
+  "referral_program_rules": "Referral Program Rules",
+  "no_limit_on_how_many_friends_a_referrer_can_invite": "No limit on how many friends a referrer can invite. The referrer will get a commission from referee’s trading fee for 12 months",
+  "when_a_referee_conducts_a_trade_in_spot_market": "When a referee conducts a trade in spot market, a certain percentage on the trading fee generated will become commission reward",
+  "the_referral_is_not_considered_eligible": "The referral is not considered eligible if the referee and referrer share the same IP, same identity or the referrer account is no older than 1 day",
+  "otix_will_cancel_any_referral_benefit_if_any_user_is_found": " Otix will cancel any referral benefit if any user is found cheating by making bulk registrations.",
+  "otix_reserves_the_right_to_finally_interpret_the_Referral_Program": "Otix reserves the right to finally interpret the Referral Program Rules and make changes from time to time",
+  "affiliate_subtitle": "Invite your clients or other affiliates and earn commissions on spot & contract trading fees!",
+  "affiliate_benefits_and_services": "Affiliate benefits and services",
+  "up_to_long_term_commissions_on_spot": "Up to 60% long term commissions on spot & contract trading fees",
+  "additional_on_affiliates_total_commissions": "Additional 10% on Sub-affiliate's total commissions",
+  "one_to_one_professional_account_manager": "One-to-one professional account manager",
+  "contract_bonus_and_campaign_support": "Contract bonus and campaign support",
+  "up_to_month_base_salary": "Up to $600/month base salary",
+  "exclusive_affiliate_management_system": "Exclusive affiliate management system",
+  "otix_peripheral_pack": "Otix peripheral pack",
+  "buy_bitcoin_desc": "Bitcoin is the first digital currency that is open to, and controlled by, thousands of individuals around the world who are financially incentivized to maintain the security and validity of the network. It is based on a peer to peer decentralized network that facilitates payments from a user to another. Bitcoin operates outside of the control of a central entity, like a government or company, but within the control of the protocol’s open source rules. The smallest unit of the bitcoin currency recorded on the blockchain is the Satoshi (0.00000001 BTC). The unit has been named after the original creator of Bitcoin, Satoshi Nakamoto.",
+  "buy_bitcoin_easily": "Buy bitcoin easily",
+  "otix_makes_it_easy_and_safe_for_you_to_buy_bitcoin_today": "Otix makes it easy and safe for you to buy bitcoin today.",
+  "how_to_buy_bitcoin": "How to buy bitcoin?",
+  "create_your_free_otix_account": "Create your free Otix account",
+  "provide_your_email_address": "Provide your email address, country of residence and secure your account with a strong password",
+  "connect_your_funding_method": "Connect your funding method",
+  "connect_your_card_or_bank_account_after_Otix_verifies_your_account": "Connect your card or bank account after Otix verifies your account",
+  "buy_bitcoin": "Buy bitcoin",
+  "buy_bitcoin_with_as_little": "Buy bitcoin with as little as $10",
+  "bitcoin_price": "Bitcoin Price",
+  "check_the_current_bitcoin_price_on_Otix_to_help_inform_your_bitcoin_investment": "Check the current bitcoin price on Otix to help inform your bitcoin investment",
+  "btc_to_usd_converter": "BTC to USD Converter",
+  "use_our_simple_bitcoin_to_usd_calculator": "Use our simple bitcoin to USD calculator to see how much bitcoin you can buy with USD",
+  "why_buy_btc_with_otix": "Why Buy BTC with Otix?",
+  "pay_for_goods_and_services_without_bank": "Pay for goods and services without a bank or other financial services provider",
+  "send_payments_around_the_world_instantly_and_easily": "Send payments around the world instantly and easily.",
+  "invest_in_the_growing_potential_of_crypto": "Invest in the growing potential of crypto",
+  "otix_support_team_offers_dedicated_client_services": "Otix support team offers dedicated client services 24/7/365",
+  "otix_has_the_desktop_and_mobile_solutions": "Otix has the desktop and mobile solutions you need to easily buy bitcoin and join the future of finance",
+  "otix’_security_standards_are_designed_to_keep_your_funds_safe": "Otix’ security standards are designed to keep your funds safe",
+  "buy_etherum_desc": "Ether (ETH) is a cryptocurrency generated by the Ethereum platform that is used to compensate mining nodes for computations performed. It is the native token of the Ethereum blockchain and is used to make peer-to-peer payments, pay transaction fees incurred on the network and earn rewards for securing the protocol via staking. Also, Ethereum is a completely decentralized blockchain platform that provides autonomous smart contract writing capabilities. It is widely used for the creation of decentralized applications. The Ethereum network established several token standards, including ERC20, ERC721 and ERC1155. Token standards developed by Ethereum allow crypto assets deployed on the platform to remain compatible with existing decentralized exchanges (DEXs). They also helped give rise to non-fungible tokens (NFTs)",
+  "buy_etherum_easily": "Buy Ethereum easily",
+  "otix_makes_it_easy_and_safe_for_you_to_buy_etherum_today": "Otix makes it easy and safe for you to buy Ethereum today",
+  "how_to_buy_etherum": "How to buy Ethereum ?",
+  "buy_etherum": "Buy Ethereum",
+  "buy_etherum_with_as_little": "Buy Ethereum with as little as $10",
+  "etherum_price": "Ethereum Price",
+  "check_the_current_etherum_price_on_Otix_to_help_inform_your_bitcoin_investment": "Check the current Ethereum price on Otix to help inform your Ethereum investment",
+  "etherum_to_usd_converter": "ETH to USD Converter",
+  "use_our_simple_etherum_to_usd_calculator": "Use our simple Ethereum to USD calculator to see how much Ethereum you can buy with USD",
+  "why_buy_eth_with_otix": "Why Buy ETH with Otix ?",
+  "diversify_your_long_term_investment_strategy": "Diversify your long-term investment strategy",
+  "execute_smart_contracts_in_the_ethereum_blockchain": "Execute smart contracts in the Ethereum blockchain",
+
+  "buy_otix_token_desc": "Want to buy crypto but not sure how? No worries! Otix offers many options. You can easily buy OTX with the lowest fees and highest security",
+  "store_or_use_your_otx_in_otix": "Store or use your OTX in Otix",
+  "you_can_store_otx_in_your_personal_crypto_wallet": "you can store OTX in your personal crypto wallet or simply hold it in your Otix account. You can also trade for other crypto. If you would like to trade your OTX to a decentralized exchange you may want to check Trust Wallet which supports millions of assets and blockchains",
+  "buy_otx_easily": "Buy OTX easily",
+  "otix_makes_it_easy_and_safe_for_you_to_buy_otx_today": "Otix makes it easy and safe for you to buy OTX today",
+  "how_to_buy_otx": "How to buy OTX ?",
+  "buy_otx": "Buy OTX",
+  "buy_otx_with_as_little": "Buy OTX with as little as $10",
+  "otx_price": "OTX Price",
+  "check_the_current_otx_price_on_Otix_to_help_inform_your_bitcoin_investment": "Check the current OTX price on Otix to help inform your OTX investment",
+  "otx_to_usd_converter": "OTX to USD Converter",
+  "use_our_simple_otx_to_usd_calculator": "Use our simple OTX to USD calculator to see how much OTX you can buy with USD.",
+  "why_buy_otx_with_otix": "Why Buy OTX with Otix ?",
+  "pay_for_goods_and_services": "Pay for goods and services without a bank or other financial services provider",
+  "send_payments_around_the_world": "Send payments around the world instantly and easily"
 }
