--- a/locales/ar.json
+++ b/locales/ar.json
@@ -680,6 +680,9 @@
   "use_our_simple_otx_to_usd_calculator": "استخدم الآلة الحاسبة البسيطة  الخاصة بنا لتحويل OTX إلى الدولار الأمريكي لمعرفة مقدار OTX الذي يمكنك شراؤه بالدولار الأمريكي.",
   "why_buy_otx_with_otix": "لماذا تشتري OTX مع أوتكس؟",
   "pay_for_goods_and_services": "تنوع في استراتيجيتك الاستثمارية طويلة الأجل",
-  "send_payments_around_the_world": "  نفذ العقود الذكية في OTX blockchain"
+  "send_payments_around_the_world": "  نفذ العقود الذكية في OTX blockchain",
+  "download_from": "احصل عليه من",
+  "google_play": "google play",
+  "app_store": "app stpre"
 
 }
