description and page title

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -683,6 +683,8 @@
   "send_payments_around_the_world": "  نفذ العقود الذكية في OTX blockchain",
   "download_from": "احصل عليه من",
   "google_play": "google play",
-  "app_store": "app stpre"
+  "app_store": "app stpre",
+  "pageTitle": "اوتكس اكشنج المحدودة - Otix Exchange",
+  "pageDescription": "شركة اوتكس اكشنج المحدودة (Otix Exchange) شركة متخصصة في تبادل العملات الرقمية كما تمتلك العديد من الخدمات داخل منصة التداول والتي تغطي جميع خدمات المستخدمين في جميع أنحاء العالم."
 
 }
