--- a/locales/en.json
+++ b/locales/en.json
@@ -774,5 +774,7 @@
   "send_payments_around_the_world": "Send payments around the world instantly and easily",
   "download_from": "download from",
   "google_play": "google play",
-  "app_store": "app store"
+  "app_store": "app store",
+  "pageTitle": "Otix Exchange",
+  "pageDescription": "Otix Exchange UAB is a full-service of a virtual currency exchange operator and deposit virtual currency exchange operator platform covering users through otix.exchange."
 }
